--- a/Russian/main/MiuiVideo.apk/res/values-ru/strings.xml
+++ b/Russian/main/MiuiVideo.apk/res/values-ru/strings.xml
@@ -1,6 +1,213 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
      <string name="about">О приложении</string>
+	 <string name="abc_action_bar_home_description">На главную</string>
+     <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
+     <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
+     <string name="abc_action_bar_up_description">Наверх</string>
+     <string name="abc_action_menu_overflow_description">Больше опций</string>
+     <string name="abc_action_mode_done">Готово</string>
+     <string name="abc_activity_chooser_view_see_all">Просмотреть все</string>
+     <string name="abc_activitychooserview_choose_application">Выберите приложение</string>
+     <string name="abc_capital_off">Выкл</string>
+     <string name="abc_capital_on">Вкл</string>
+     <string name="abc_search_hint">Поиск…</string>
+     <string name="abc_searchview_description_clear">Очистить запрос</string>
+     <string name="abc_searchview_description_query">Поисковый запрос</string>
+     <string name="abc_searchview_description_search">Поиск</string>
+     <string name="abc_searchview_description_submit">Отправить запрос</string>
+     <string name="abc_searchview_description_voice">Голосовой поиск</string>
+     <string name="abc_shareactionprovider_share_with">Поделиться с</string>
+     <string name="abc_shareactionprovider_share_with_application">Поделиться с %s</string>
+     <string name="abc_toolbar_collapse_description">Свернуть</string>
+     <string name="account_exception_retry">Произошла ошибка аккаунта. Войдите и повторите попытку.</string>
+     <string name="ad_count_down">"Ad: %1$s с. | "</string>
+     <string name="add_offline_task_success">файл добавлен для загрузки</string>
+     <string name="alert_dialog_download">Это приложение уже загружено</string>
+     <string name="alert_dialog_download_confirm">О загрузке приложения</string>
+     <string name="alert_dialog_download_default_title">Загрузка приложения</string>
+     <string name="alert_dialog_download_fail">Не удалось загрузить приложение</string>
+     <string name="alert_dialog_download_plugin">"О загрузке и установке HD видео плагина: "</string>
+     <string name="alert_dialog_download_prepare">Подготовка к загрузке…</string>
+     <string name="alert_dialog_download_progress">"Загрузка приложения: "</string>
+     <string name="background_offline">Скачать в фоне</string>
+     <string name="boss_login_failed">Не удалось войти</string>
+     <string name="character_counter_pattern">%1$d / %2$d</string>
+     <string name="check_plugin_loading">Загрузка HD видео плагина…</string>
+     <string name="check_plugin_message">Установка HD видео плагина…</string>
+     <string name="check_plugin_tips">HD видео плагин</string>
+     <string name="comfirm_open">Включить</string>
+     <string name="comment_back">Назад</string>
+     <string name="comment_detail">Подробнее</string>
+     <string name="comment_let_me_comment">У меня есть комментарий</string>
+     <string name="comment_reply_to">Ответить %s</string>
+     <string name="comment_send">Отправить</string>
+     <string name="comment_type_all">Все</string>
+     <string name="comment_type_hot">Популярные</string>
+     <string name="comment_write_comment">Добавить комментарий…</string>
+     <string name="comment_write_comment2">Добавить комментарий</string>
+     <string name="confirm_close">Выключить</string>
+     <string name="copyright_restrict">Не удается загрузить этот файл из-за проблем с авторскими правами</string>
+     <string name="detail_collect">Добавить в избранное</string>
+     <string name="detail_comment">Комментарий</string>
+     <string name="detail_douban_score">Рейтинг Douban</string>
+     <string name="detail_download">Скачать</string>
+     <string name="detail_download_to_buy_vip">Купите VIP, чтобы скачать</string>
+     <string name="detail_has_empty_cp">Нет поддерживаемых поставщиков контента</string>
+     <string name="detail_score">"Рейтинг: "</string>
+     <string name="detail_summary">Описание</string>
+     <string name="downloaded_data">Загрузка %1$s/%2$s</string>
+     <string name="empty_local_video">Нет видео</string>
+     <string name="favor_video">Ранее</string>
+     <string name="favor_week_video">На этой неделе</string>
+     <string name="get_product_failed_please_retry">Не удалось получить информацию о заказе. Повторите попытку.</string>
+     <string name="geting_product_wait">Получение информации о заказе…</string>
+     <string name="goto_cinema">VIP-кинотеатр</string>
+     <string name="history_video">Ранее</string>
+     <string name="history_week_video">На этой неделе</string>
+     <string name="if_background_offline_text">Продолжать загрузку файлов в фоновом режиме?</string>
+     <string name="my_favor">Избранное</string>
+     <string name="my_offline_unfinish">Мое локальное видео</string>
+     <string name="offline_downloading">Загрузка %s</string>
+     <string name="offline_fail_limit_vip">Купите VIP, чтобы скачивать файлы</string>
+     <string name="offline_failed">Не удалось загрузить</string>
+     <string name="offline_has_the_task">Этот файл уже добавлен к загрузки</string>
+     <string name="offline_media_empty_sub_title">Скачать и смотреть видео офлайн</string>
+     <string name="offline_pause">Приостановить все загрузки</string>
+     <string name="online_server">Онлайн-сервисы</string>
+     <string name="online_server_setting">Настройки онлайн-сервисов</string>
+     <string name="open_content_on_browser">Открыть в браузере</string>
+     <string name="open_local_video">Новая папка</string>
+     <string name="pay_record_empty">Нет записей о покупке</string>
+     <string name="plugin_install_failure">Не удалось установить плагин</string>
+     <string name="pre_play_tips">About to resume %1$s</string>
+     <string name="products_info_error">Не удалось получить информацию о заказе. Повторите попытку.</string>
+     <string name="provid_online_server">Включите, чтобы получить доступ к онлайн-контенту</string>
+     <string name="pull_to_refresh_from_bottom_pull_label">Потяните вверх, чтобы обновить…</string>
+     <string name="pull_to_refresh_from_bottom_refreshing_label">Подождите…</string>
+     <string name="pull_to_refresh_from_bottom_release_label">Отпустите, чтобы обновить…</string>
+     <string name="pull_to_refresh_pull_label">Потяните вниз, чтобы обновить…</string>
+     <string name="pull_to_refresh_refreshing_label">Подождите…</string>
+     <string name="pull_to_refresh_release_label">Отпустите, чтобы обновить…</string>
+     <string name="purchase_product">Купить видео</string>
+     <string name="purchase_record">История покупок</string>
+     <string name="purchase_vip">Купить VIP</string>
+     <string name="quit_all">Отменить все</string>
+     <string name="setting_alpha_join_alert_title">Присоединиться к группе тестирования</string>
+     <string name="setting_alpha_join_hint">"Введите код: "</string>
+     <string name="share_to_other">Поделиться</string>
+     <string name="show_source_select">Поставщик</string>
+     <string name="show_source_select_desc">Включите, чтобы иметь возможность выбирать поставщика контента</string>
+     <string name="source_ad_after_play">About to play %1$s (эп. %2$s)</string>
+     <string name="source_ad_count_down">"Ad: %1$d с. | "</string>
+     <string name="splash_ignore">Пропуск</string>
+     <string name="status_bar_notification_info_overflow">999+</string>
+     <string name="t_downloading_new_version">Загрузка обновлений…</string>
+     <string name="t_exit_app">Нажмите еще раз, чтобы выйти</string>
+     <string name="t_install_new_version">Установка обновлений…</string>
+     <string name="t_network_error_to_retry">Произошла ошибка сети</string>
+     <string name="t_no_new_version">Mi Video обновлено</string>
+     <string name="t_search_key_not_null">Введите ключевые слова для поиска</string>
+     <string name="tag_index">Индекс тегов</string>
+     <string name="tag_key">Ключевые слова</string>
+     <string name="tag_object">Меченые объекты</string>
+     <string name="this_source_none_ad">Без рекламы</string>
+     <string name="toast_user_info_error">Произошла ошибка профиля. Войдите снова.</string>
+     <string name="ui_log_tip">Нажмите эту область, чтобы скрыть. Нажмите и удерживайте, чтобы очистить старые журналы. Перетащите журналы вручную.</string>
+     <string name="unzip_file_failure">Не удалось распаковать файл</string>
+     <string name="v_addon">Популярное</string>
+     <string name="v_agree">Согласен</string>
+     <string name="v_all_episode">Все эпизоды</string>
+     <string name="v_app_check_failed">Не удалось проверить приложение</string>
+     <string name="v_app_click_to_install">Нажмите, чтобы установить</string>
+     <string name="v_app_download_failed">Не удалось загрузить приложение. Нажмите для повтора.</string>
+     <string name="v_app_downloaded">Mi Video загружено</string>
+     <string name="v_app_downloading">Загрузка Mi Video…</string>
+     <string name="v_auto_update">Обновлять автоматически</string>
+     <string name="v_cancel">Отмена</string>
+     <string name="v_canceled">Отменено</string>
+     <string name="v_category">Категории</string>
+     <string name="v_clause_info">1. Чтобы иметь возможность использовать онлайн-услуги, предоставляемые Sohu TV, iQiyi и т.д., Вы должны согласиться с нашими <a href="http://www.miui.com/res/doc/eula.html">Пользовательским соглашением</a> и <a href="http://www.miui.com/res/doc/privacy.html">Политикой конфиденциальности</a>".
+2. Мы будем собирать информацию о вашем устройстве и о том, как Вы используете Mi Video. Поставщики контента будут собирать ID вашего устройства.
+3. Чтобы улучшить пользовательский опыт, будет загружен и установлен HD плагин.
+4. Необходимо подключение к сети для нормальной работы."</string>
+     <string name="v_clause_notips">Больше не показывать</string>
+     <string name="v_clause_title">Условия использования</string>
+     <string name="v_click_channel_scrol_to_top">Нажмите еще раз, чтобы вернуться к началу</string>
+     <string name="v_click_to_login">Нажмите, чтобы войти</string>
+     <string name="v_click_to_reload_more">Нажмите, чтобы загрузить больше</string>
+     <string name="v_click_to_retry">Повтор</string>
+     <string name="v_clubber">VIP</string>
+     <string name="v_clubber_center">VIP профиль</string>
+     <string name="v_data_empty">Нет данных</string>
+     <string name="v_delete">Удалить</string>
+     <string name="v_delete_action_text">Удалить (%d)</string>
+     <string name="v_enter_detail">Подробнее</string>
+     <string name="v_episode">Эпизод</string>
+     <string name="v_episode_all">Эпизоды: %2$d/%1$d</string>
+     <string name="v_episode_count">Обновлено до %d эпизода</string>
+     <string name="v_episode_download_null">Не удалось скачать этот эпизод</string>
+     <string name="v_exit">Выйти</string>
+     <string name="v_filter_empty">"Не удалось найти результаты.
+Попробуйте найти что-то еще."</string>
+     <string name="v_find_new_version">Доступно обновление</string>
+     <string name="v_finish">Готово</string>
+     <string name="v_gong_count_ge">Всего: %d</string>
+     <string name="v_local_video">Локальное</string>
+     <string name="v_login">Войти</string>
+     <string name="v_more">Еще</string>
+     <string name="v_my_favorite">Избранное</string>
+     <string name="v_my_local_favorite">Локальное избранное</string>
+     <string name="v_my_offline">Загрузки</string>
+     <string name="v_mycamera">Мое видео</string>
+     <string name="v_need_update_app">Обновите Mi Video для просмотра</string>
+     <string name="v_network_failed">Произошла ошибка сети</string>
+     <string name="v_next">Далее</string>
+     <string name="v_not_login">Вход не выполнен</string>
+     <string name="v_offline_video">Локальное видео</string>
+     <string name="v_ok">OK</string>
+     <string name="v_onlineservice_close_info">После отключения онлайн-сервисов вы не сможете смотреть новые видео</string>
+     <string name="v_onlineservice_close_title">Внимание</string>
+     <string name="v_onlineservice_open_info">Включите онлайн-сервисы, чтобы использовать эту функцию</string>
+     <string name="v_onlineservice_open_title">Внимание</string>
+     <string name="v_people_search">Популярное</string>
+     <string name="v_personal_center">Профиль</string>
+     <string name="v_play_history">Недавнее</string>
+     <string name="v_ready_to_install">Об установке обновлений…</string>
+     <string name="v_save">Сохранить</string>
+     <string name="v_score">Рейтинг</string>
+     <string name="v_search">Поиск</string>
+     <string name="v_search_history_clear">Очистить историю поиска</string>
+     <string name="v_select_all">Выбрать все</string>
+     <string name="v_select_none">Снять все</string>
+     <string name="v_setting">Настройки</string>
+     <string name="v_share_device">Общие устройства</string>
+     <string name="v_skip_update">Пропустить</string>
+     <string name="v_symbol_rmb">¥</string>
+     <string name="v_system_setting">Настройки</string>
+     <string name="v_tab_video_live">Live</string>
+     <string name="v_tab_video_news">Популярное</string>
+     <string name="v_tab_video_personal">Профиль</string>
+     <string name="v_tab_video_recommend">Главная</string>
+     <string name="v_tab_video_vip">VIP</string>
+     <string name="v_text_edit">Изменить</string>
+     <string name="v_text_edit_cancel">Отмена</string>
+     <string name="v_uitype_next">Далее</string>
+     <string name="v_uitype_title">Тип UI: %d</string>
+     <string name="v_update">Обновить</string>
+     <string name="v_updating">Обновление…</string>
+     <string name="v_variety_episode_count">Обновлено до %s сезона</string>
+     <string name="video_id_empty">Не удалось получить URL видео</string>
+     <string name="video_window_mode">Картинка в картинке</string>
+     <string name="video_window_mode_desc">Включите, чтобы иметь возможность свернуть окно</string>
+     <string name="vip_exchange">Обновление</string>
+     <string name="vip_expirt_time">"Действителен до "</string>
+     <string name="vip_has_setup">VIP активирован</string>
+     <string name="vip_not_setup">Не удалось активировать VIP</string>
+     <string name="vip_setup">Активировать VIP</string>
+     <string name="vip_video_title">VIP видео</string>
+     <string name="vp_mobile_network_using_positive_new">Смотреть</string>
+     <string name="vp_mobile_network_using_warning_new">Сейчас вы используете мобильный интернет. Воспроизведение видеороликов может стоить вам денег.</string>
 	 <string name="request_vip_product_failed">Запрос VIP продукта не удался. Повторите!</string>
      <string name="vip_renew">Обновление VIP</string>
 	 <string name="vp_declaration">Условия использования</string>
@@ -454,10 +661,8 @@
      <string name="adjust_position_prev_media_notice">Назад</string>
      <string name="airkan_control_device_des">Управляйте воспроизведением видео с помощью кнопки в нижней части</string>
      <string name="airkan_device_xiaomi_phone">Xiaomi</string>
-     <string name="airkan_playing">Воспроизведение на экране</string>
-     <string name="airkan_playing_to">на</string>
-     <string name="airkan_tips">"Нажмите здесь, чтобы смотреть видео 
-на Xiaomi TV Box"</string>
+     <string name="airkan_playing">Проекция на %s</string>
+     <string name="airkan_tips">Нажмите для проекции</string>
      <string name="airkan_video_playing">воспроизводится</string>
      <string name="airkan_video_playing_in">Видео</string>
      <string name="all_ep">Все эп.</string>
@@ -696,7 +901,7 @@
      <string name="toast_message_continue_play_from">"Продолжение просмотра с "</string>
      <string name="toast_message_continue_play_hour">"ч. "</string>
      <string name="toast_message_continue_play_minute">"м. "</string>
-     <string name="toast_message_continue_play_second_and_play">с.</string>
+     <string name="toast_message_continue_play_second_and_play">%1$s с.</string>
      <string name="today">"Сегодня "</string>
      <string name="top_status_local_media">Локально</string>
      <string name="top_status_offline_media">Офлайн</string>
