--- a/Russian/main/Contacts.apk/res/values-ru/strings.xml
+++ b/Russian/main/Contacts.apk/res/values-ru/strings.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
      <string name="accessibility_calllog_detail">Журнал вызовов</string>
+	 <string name="accessibility_contact_detail">Информация о контакте</string>
+     <string name="call_sim1_description">SIM 1</string>
+     <string name="call_sim2_description">SIM 2</string>
+     <string name="description_call_log_incoming_forwarding_call">Входящий переадресованный вызов</string>
+     <string name="description_call_log_missed_forwarding_call">Пропущенный переадресованный вызов</string>
+     <string name="description_call_log_new_contact">Новый контакт</string>
+     <string name="miprofile_notice_close">Закрыть</string>
+     <string name="profile_delete_toast">Профиль удален</string>
 	 <string name="profileSavedErrorToast">Изменения не сохранены</string>
      <string name="profileSavedToast">Профиль сохранен</string>
 	 <string name="call_sim_menu_title_suffix">(первичная)</string>
