--- a/Russian/main/FileExplorer.apk/res/values-ru/strings.xml
+++ b/Russian/main/FileExplorer.apk/res/values-ru/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
      <string name="activity_parse_video_title">Вставить ссылку</string>
+	 <string name="support_mtp">MTP будет поддерживаться в ближайшее время</string>
 	 <string name="overwrite_msg">\"%s\" уже существует. Нажмите для замены.</string>
      <string name="skip_file">Пропустить</string>
 	 <string name="clear_record">Очистить историю</string>
