--- a/Russian/main/MiuiCamera.apk/res/values-ru/strings.xml
+++ b/Russian/main/MiuiCamera.apk/res/values-ru/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
      <string name="access_sd_fail">Нет доступа к SD-карте</string>
+	 <string name="portrait_mode_use_hint">"Портретный режим помогает размыть фон
+с более четким основным объектом и более красивым портретом"</string>
 	 <string name="pref_camera_proximity_lock_summary">Блокировать нажатия при нахождении в кармане</string>
      <string name="pref_camera_proximity_lock_title">Карманный режим</string>
      <string name="pref_camera_show_gender_age_label_alias">Возраст</string>
